# UABE-Android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/elfilibustero/uabe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/elfilibustero/uabe/: MainActivity.java
app/src/main/java/com/elfilibustero/uabe/enums/: PendingKind.java  SortMode.java  SupportedTypes.java
app/src/main/java/com/elfilibustero/uabe/exceptions/: UnityPyException.java
app/src/main/java/com/elfilibustero/uabe/managers/: SessionManager.java
app/src/main/java/com/elfilibustero/uabe/model/: ObjectItem.java  RecentBundle.java
app/src/main/java/com/elfilibustero/uabe/python/core/: UnityPyBridge.java
app/src/main/java/com/elfilibustero/uabe/python/repo/: ApiResult.java  ExportFileResult.java  ObjectData.java  OpenBundleResult.java  SaveBundleResult.java  UnityObjectInfo.java  UnityPyRepository.java  UnityPyRepositoryImpl.java
app/src/main/java/com/elfilibustero/uabe/python/task/: UnityTask.java  UnityTaskSource.java
app/src/main/java/com/elfilibustero/uabe/ui/: BundleViewerFragment.java  BundleViewerViewModel.java  EditObjectBottomSheet.java  ObjectAdapter.java
app/src/main/java/com/elfilibustero/uabe/util/: BundleRecentsStore.java  DocumentUtil.java  Utils.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_modified.xml  ic_object_animation.xml  ic_object_animation_clip.xml  ic_object_audio.xml  ic_object_file.xml  ic_object_game_object.xml  ic_object_light.xml  ic_object_mesh.xml  ic_object_script.xml  ic_object_text.xml  ic_object_texture.xml  ic_object_transform.xml
app/src/main/res/layout/: activity_main.xml  bottomsheet_edit_object.xml  edit_text_item.xml  fragment_bundle_viewer.xml  row_object_item.xml
app/src/main/res/menu/: menu_main.xml  menu_sort.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/elfilibustero/uabe/: ExampleUnitTest.java
astc_encoder/: build.gradle.kts
astc_encoder/src/androidTest/java/com/elfilibustero/astcencoder/: ExampleInstrumentedTest.java
astc_encoder/src/main/cpp/: CMakeLists.txt  astc_android_api.cpp  astc_android_api.h
astc_encoder/src/main/python/astc_encoder/: __init__.py  encoder.py  enum.py
astc_encoder/src/test/java/com/elfilibustero/astcencoder/: ExampleUnitTest.java
etcpak/: build.gradle.kts
etcpak/src/androidTest/java/com/elfilibustero/etcpak/: ExampleInstrumentedTest.java
etcpak/src/main/cpp/: CMakeLists.txt
etcpak/src/main/cpp/etcpak_bridge/: etcpak_capi.cpp  etcpak_capi.h
etcpak/src/main/python/etcpak/: __init__.py  __init__.pyi  _etcpak.py
etcpak/src/test/java/com/elfilibustero/etcpak/: ExampleUnitTest.java
f3d/: build.gradle.kts
f3d/src/androidTest/java/com/elfilibustero/f3d/: ExampleInstrumentedTest.java
f3d/src/main/java/com/elfilibustero/f3d/: F3dNative.java  Line.java  MainView.java  PanGestureDetector.java  Point.java  RotateGestureDetector.java
f3d/src/test/java/com/elfilibustero/f3d/: ExampleUnitTest.java
fmod/: build.gradle.kts
fmod/src/androidTest/java/com/elfilibustero/fmod/: ExampleInstrumentedTest.java
fmod/src/main/cpp/: CMakeLists.txt
fmod/src/main/cpp/fmod_toolkit/: fmod_toolkit_jni.cpp
fmod/src/main/java/com/elfilibustero/fmod/: FmodException.java  FmodToolkitNative.java
fmod/src/main/python/fmod_toolkit/: __init__.py  android.py  errors.py  fmod.py  importer.py
fmod/src/main/python/pyfmodex/: __init__.py  _native.py  core.py  studio.py
fmod/src/test/java/com/elfilibustero/fmod/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
texture2ddecoder/: build.gradle.kts
texture2ddecoder/src/androidTest/java/com/elfilibustero/t2ddecoder/: ExampleInstrumentedTest.java
texture2ddecoder/src/main/cpp/: CMakeLists.txt  t2d_capi.cpp
texture2ddecoder/src/main/python/texture2ddecoder/: __init__.py  _android_ctypes.py
texture2ddecoder/src/test/java/com/elfilibustero/t2ddecoder/: ExampleUnitTest.java
